--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".RecipeDisplay">
 
     <TableRow
         android:id="@+id/tableRowRecipeTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="100dp">
 
         <TextView
             android:id="@+id/txtViewRecipeTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="0.6" />
 
         <ImageView
             android:id="@+id/imgViewRecipeImg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.4"
             app:srcCompat="@android:drawable/ic_menu_gallery" />
     </TableRow>
 
-    <ListView
-        android:id="@+id/listViewIngredients"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/txtViewIngredients"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <ListView
-        android:id="@+id/listViewDirections"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/txtViewDirections"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
