--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -1,39 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".RecipeDisplay">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <TableRow
-        android:id="@+id/tableRowRecipeTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".RecipeDisplayActivity">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/txtViewTitleDisplay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_weight="0.6"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/imgViewDisplay"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_weight="0.4"
+                app:srcCompat="@drawable/bruschetta" />
+        </TableRow>
 
         <TextView
-            android:id="@+id/txtViewRecipeTitle"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtViewIngred"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.6" />
+            android:text="@string/txtViewIngred"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imgViewRecipeImg"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/txtViewIngredients"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
-            app:srcCompat="@android:drawable/ic_menu_gallery" />
-    </TableRow>
+            android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/txtViewIngredients"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/txtViewDir"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/txtViewDir"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtViewDirections"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+        <TextView
+            android:id="@+id/txtViewDirections"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp" />
+    </LinearLayout>
+</ScrollView>
