added ingredients.csv, added IngredientsAdapter and code for ingredients checkboxes

--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -29,8 +29,7 @@
                 android:id="@+id/imgViewDisplay"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_weight="0.4"
-                app:srcCompat="@drawable/bruschetta" />
+                android:layout_weight="0.4" />
         </TableRow>
 
         <TextView
