--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,11 +80,11 @@
         android:id="@+id/checkBox"
         android:layout_width="141dp"
         android:layout_height="22dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="@string/checkBox"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.174"
+        app:layout_constraintHorizontal_bias="0.38"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />
 
@@ -153,8 +153,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
+        android:layout_width="233dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="32dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
@@ -166,19 +166,21 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="212dp"
-            android:layout_height="match_parent"
+            android:layout_width="107dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Don't have an account?"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textViewSignIn"
-            android:layout_width="51dp"
-            android:layout_height="match_parent"
+            android:layout_width="25dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@color/white"
             android:text="@string/textViewSignIn"
-            android:textColor="@color/design_default_color_error" />
+            android:textColor="@color/blue_200"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
