--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/regbg"
+    android:background="@drawable/loginbg"
     tools:context=".RegisterActivity">
 
     <TextView
@@ -25,12 +25,13 @@
         android:id="@+id/textViewreg"
         android:layout_width="139dp"
         android:layout_height="57dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="24dp"
         android:text="@string/textViewreg"
         android:textColor="@color/white"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewLogo" />
 
@@ -142,29 +143,46 @@
         android:layout_height="29dp"
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
+        android:layout_marginTop="16dp"
         android:shadowColor="@color/white"
         android:text="@string/textView2"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
-        app:layout_constraintVertical_bias="0.264" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
 
     <TextView
         android:id="@+id/TextViewLogin"
-        android:layout_width="62dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="48dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="44dp"
         android:layout_marginRight="44dp"
+        android:background="@color/white"
         android:text="@string/TextViewLogin"
-        android:textColor="@color/white"
+        android:textColor="@color/blue_200"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSkip"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.182"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister"
-        app:layout_constraintVertical_bias="0.253" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textViewSkip"
+        android:layout_width="77dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginBottom="88dp"
+        android:background="@drawable/btn_bg"
+        android:text="@string/textViewSkip"
+        android:textColor="@color/blue_200"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
