--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -143,46 +143,49 @@
         android:layout_height="29dp"
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         android:shadowColor="@color/white"
         android:text="@string/textView2"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
 
-    <TextView
-        android:id="@+id/TextViewLogin"
-        android:layout_width="48dp"
-        android:layout_height="26dp"
+    <Button
+        android:id="@+id/btnToLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="44dp"
         android:layout_marginRight="44dp"
-        android:background="@color/white"
-        android:text="@string/TextViewLogin"
+        android:background="@drawable/btn_bg"
+        android:text="@string/btnLogin"
         android:textColor="@color/blue_200"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewSkip"
+        app:backgroundTint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/btnSkipLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textViewSkip"
-        android:layout_width="77dp"
-        android:layout_height="56dp"
+    <Button
+        android:id="@+id/btnSkipLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
         android:layout_marginBottom="88dp"
         android:background="@drawable/btn_bg"
-        android:text="@string/textViewSkip"
+        android:text="@string/btnSkipLogin"
         android:textColor="@color/blue_200"
         android:textSize="36sp"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
