--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -166,7 +166,8 @@
             android:layout_width="25dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/btn_bg"
+            android:gravity="center_horizontal"
             android:text="@string/textViewSignIn"
             android:textColor="@color/blue_200"
             android:textSize="18sp" />
