--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#330099ff">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +32,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="0.6"
                     android:gravity="center|center_horizontal"
-                    android:textSize="18sp"
+                    android:textSize="30sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@id/txtViewRecipeInfo"
                     app:layout_constraintEnd_toStartOf="@+id/imgViewDisplay"
@@ -48,7 +49,8 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="0.6"
                     android:gravity="center|center_horizontal"
-                    android:textSize="14sp"
+                    android:textSize="18sp"
+                    android:textStyle="italic"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imgViewDisplay"
                     app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +58,8 @@
 
                 <ImageView
                     android:id="@+id/imgViewDisplay"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="0.4"
@@ -73,27 +75,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtViewIngred"
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtViewIngredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp" />
+            android:textSize="18sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/txtViewDir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtViewDir"
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtViewDirections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp" />
+            android:textSize="18sp"
+            android:textStyle="italic" />
     </LinearLayout>
 </ScrollView>
