--- a/app/src/main/res/layout/layout_recipe_result.xml
+++ b/app/src/main/res/layout/layout_recipe_result.xml
@@ -10,6 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/korean_bibimbap" />
 
     <TextView
