--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"/>
 
     <Button
         android:id="@+id/btnSignOut"
@@ -26,8 +27,17 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/btnSignOut"
-        app:layout_constraintBottom_toTopOf="@+id/tabRowSearch"
+        app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/txtViewIngredsList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tabRowSearch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewMainTitle" />
 
     <TableRow
         android:id="@+id/tabRowSearch"
@@ -39,7 +49,7 @@
         android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewMainTitle">
+        app:layout_constraintTop_toBottomOf="@+id/txtViewIngredsList">
 
         <EditText
             android:id="@+id/editTxtSearchIngredient"
