--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -74,6 +74,8 @@
             android:id="@+id/txtViewIngred"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/txtViewIngred"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -82,6 +84,10 @@
             android:id="@+id/txtViewIngredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:textSize="18sp"
             android:textStyle="italic" />
 
@@ -89,6 +95,8 @@
             android:id="@+id/txtViewDir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/txtViewDir"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -97,6 +105,10 @@
             android:id="@+id/txtViewDirections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:textSize="18sp"
             android:textStyle="italic" />
     </LinearLayout>
