--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,20 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/btnSignOut"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btnFavorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/btnMyFavoriteTxt"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"
+        app:layout_constraintEnd_toStartOf="@+id/btnSignOut" />
 
     <TextView
         android:id="@+id/txtViewIngredsList"
