--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -43,18 +43,27 @@
                     android:id="@+id/txtViewRecipeInfo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginRight="2dp"
                     android:layout_weight="0.6"
                     android:gravity="center|center_horizontal"
                     android:textSize="18sp"
                     android:textStyle="italic"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/imgViewDisplay"
+                    app:layout_constraintEnd_toStartOf="@+id/imgViewFavorite"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtViewTitleDisplay" />
+
+                <ImageView
+                    android:id="@+id/imgViewFavorite"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imgViewDisplay"
+                    app:layout_constraintTop_toBottomOf="@+id/txtViewTitleDisplay"
+                    app:srcCompat="@drawable/heartgrey" />
 
                 <ImageView
                     android:id="@+id/imgViewDisplay"
@@ -99,5 +108,6 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="italic" />
+
     </LinearLayout>
 </ScrollView>
