change font style, font size

--- a/app/src/main/res/layout/activity_recipe_result_list.xml
+++ b/app/src/main/res/layout/activity_recipe_result_list.xml
@@ -32,8 +32,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:layout_weight="0.5"
-            android:text="@string/txtNoResult" />
+            android:text="@string/txtNoResult"
+            android:textStyle="bold|italic" />
 
     </TableRow>
 
