--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,24 +23,27 @@
     <Button
         android:id="@+id/btnSignOut"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginBottom="2dp"
+        android:paddingBottom="0dp"
         android:text="@string/btnSignOut"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/btnFavorites"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnFavorites"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/btnMyFavoriteTxt"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"
-        app:layout_constraintEnd_toStartOf="@+id/btnSignOut" />
+        app:layout_constraintBottom_toTopOf="@+id/tabRowSearch"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtViewIngredsList"
@@ -59,6 +62,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewIngredsList">
@@ -75,7 +79,7 @@
         <Button
             android:id="@+id/btnSearchIngredients"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:includeFontPadding="false"
             android:paddingLeft="8dp"
@@ -94,6 +98,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:numColumns="auto_fit"
         app:layout_constraintBottom_toTopOf="@+id/btnSearchRecipes"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +111,6 @@
         android:id="@+id/btnSearchRecipes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="@string/btnSearchRecipes"
         android:textSize="14sp"
