--- a/app/src/main/res/layout/activity_recipe_display.xml
+++ b/app/src/main/res/layout/activity_recipe_display.xml
@@ -13,6 +13,28 @@
         tools:context=".RecipeDisplayActivity">
 
         <TableRow
+            android:id="@+id/tabRowShare"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <EditText
+                android:id="@+id/editTxtMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.8"
+                android:ems="10"
+                android:hint="@string/EditTxtMsg"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/btnShare"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:text="@string/btnShare" />
+        </TableRow>
+
+        <TableRow
             android:id="@+id/tabRowDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
