--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,28 +21,16 @@
         app:layout_constraintBottom_toTopOf="@+id/txtViewIngredsList"/>
 
     <Button
-        android:id="@+id/btnSignOut"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="14dp"
-        android:layout_marginBottom="2dp"
-        android:paddingBottom="0dp"
-        android:text="@string/btnSignOut"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnFavorites"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btnFavorites"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/btnMyFavoriteTxt"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/tabRowSearch"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtViewMainTitle"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
